--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "devDependencies": {
         "axios": "^0.18",
         "babel-preset-react": "^6.23.0",
-        "bootstrap": "^4.0.0",
+        "bootstrap": "^4.3.1",
         "cross-env": "^5.1",
         "jquery": "^3.2",
         "laravel-mix": "^2.0",
@@ -23,7 +23,7 @@
     },
     "dependencies": {
         "laravel-echo": "^1.5.2",
-        "react-bootstrap": "^0.32.4",
+        "react-bootstrap": "^1.0.0-beta.5",
         "react-router": "^4.3.1",
         "react-router-dom": "^4.3.1"
     }
